--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <timezone>+1</timezone>
             <organization>University of Leipzig</organization>
         </developer>
+        <developer>
+            <id>crost</id>
+            <name>Christopher Rost</name>
+            <timezone>+1</timezone>
+            <organization>University of Leipzig</organization>
+            <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
+        </developer>
     </developers>
 
     <scm>
@@ -114,7 +121,7 @@
         <!-- alpha order require -->
         <dep.accumulo.version>1.9.0</dep.accumulo.version>
         <dep.bson.version>3.6.3</dep.bson.version>
-        <dep.flink.version>1.3.1</dep.flink.version>
+        <dep.flink.version>1.5.0</dep.flink.version>
         <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.3.1</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
