--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -118,10 +118,17 @@
                                     <include>com.google.guava:guava</include>
                                     <include>org.antlr:antlr4-runtime</include>
                                     <include>org.mongodb:bson</include>
-                                    <include>commons-cli:*</include>
                                     <include>me.lemire.integercompression:*</include>
+                                    <include>commons-cli:*</include>
                                 </includes>
                             </artifactSet>
+                            <!-- relocate commons-cli to avoid issues with version used by flink -->
+                            <relocations>
+                                <relocation>
+                                    <pattern>org.apache.commons.cli</pattern>
+                                    <shadedPattern>org.gradoop.examples.thirdparty.commons-cli</shadedPattern>
+                                </relocation>
+                            </relocations>
                         </configuration>
                     </execution>
                 </executions>
@@ -159,5 +166,11 @@
             <artifactId>log4j</artifactId>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
