--- a/gradoop-examples/src/main/resources/log4j.properties
+++ b/gradoop-examples/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Set root logger level to OFF to not flood build logs
 # set manually to INFO for debugging purposes
-log4j.rootLogger=OFF, testlogger
+log4j.rootLogger=INFO, testlogger
 
 log4j.category.org.gradoop=OFF
 
