--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ os:
   - linux
   - osx
   - windows
-  
+
 matrix:
   allow_failures:
-    - os: osx
     - os: windows
+    - os: osx
 
 cache:
   directories:
@@ -21,4 +21,4 @@ before_cache:
 
 language: java
 
-jdk: oraclejdk8
+osx_image: xcode9.3
