--- a/gradoop-data-integration/pom.xml
+++ b/gradoop-data-integration/pom.xml
@@ -133,6 +133,13 @@
             <artifactId>flink-java</artifactId>
         </dependency>
 
+        <!-- Others -->
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.8</version>
+        </dependency>
+
         <!-- Testing -->
 
         <!-- Gradoop -->
@@ -148,14 +155,12 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
-
         <!-- Flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-test-utils_2.11</artifactId>
             <scope>test</scope>
         </dependency>
-
         <!-- Others -->
         <dependency>
             <groupId>junit</groupId>
@@ -163,5 +168,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
 </project>
