--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -162,6 +162,12 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
