--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop-parent</artifactId>
-        <version>0.4.5</version>
+        <version>0.5.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gradoop-common</artifactId>
