--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -90,8 +90,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
             </plugin>
             <!-- Creates an extra *-tests.jar which can be used as dependency -->
             <plugin>
